<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eriochrome.matrixcalculator.OperationsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_ana"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_1"
                android:text="@string/analysis"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_inv"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_1"
                android:text="@string/inverse"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_eigen"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_1"
                android:text="@string/autoval"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_svd"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_1"
                android:text="@string/svd"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_lu"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_1"
                android:text="@string/lu"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_backOp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_1"
                android:text="@string/back"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
