<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.eriochrome.matrixcalculator.Eigenvalues"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/autovalvec"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/errorTextEigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <ScrollView
        android:id="@+id/eigenScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/PDP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-smallcaps"
                    android:paddingTop="30dp"
                    android:text="@string/autoval"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <Space
                    android:id="@+id/asdasd"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_below="@+id/textView14"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:id="@+id/eigenvaluesRL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_below="@+id/asdasd"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1">

                </RelativeLayout>

            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/autovec"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <Space
                    android:id="@+id/asdre"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@+id/textView16"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:id="@+id/eigenvectorsRL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/asdre"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="false"
                    android:layout_centerVertical="false"
                    android:layout_weight="1">

                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_backEig"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_1"
            android:onClick="onClick"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
